tests/baselines/reference/sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2(target=es2015).errors.txt
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(26,30): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(29,30): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(32,30): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(35,9): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(38,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(41,9): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(44,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(47,9): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(50,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(54,24): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(57,24): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(60,24): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(63,28): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(66,28): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(69,28): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(73,63): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(76,63): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(79,63): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(82,26): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(85,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(88,26): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(91,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(94,26): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(97,30): error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(101,40): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(104,40): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts(107,40): error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringForOfArrayBindingPatternDefaultValues2.ts (27 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    type Robot = [number, string, string];
    type MultiSkilledRobot = [string, [string, string]];
    
    let robotA: Robot = [1, "mower", "mowing"];
    let robotB: Robot = [2, "trimmer", "trimming"];
    let robots = [robotA, robotB];
    function getRobots() {
        return robots;
    }
    
    let multiRobotA: MultiSkilledRobot = ["mower", ["mowing", ""]];
    let multiRobotB: MultiSkilledRobot = ["trimmer", ["trimming", "edging"]];
    let multiRobots = [multiRobotA, multiRobotB];
    function getMultiRobots() {
        return multiRobots;
    }
    
    let nameA: string, primarySkillA: string, secondarySkillA: string;
    let numberB: number, nameB: string;
    let numberA2: number, nameA2: string, skillA2: string, nameMA: string;
    let numberA3: number, robotAInfo: (number | string)[], multiRobotAInfo: (string | [string, string])[];
    
    for ([, nameA = "noName"] of robots) {
                                 ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ([, nameA = "noName"] of getRobots()) {
                                 ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ([, nameA = "noName"] of [robotA, robotB]) {
                                 ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA);
    }
    for ([, [
            ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["skill1", "skill2"]] of multiRobots) {
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
                                 ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for ([, [
            ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["skill1", "skill2"]] of getMultiRobots()) {
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
                                 ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    for ([, [
            ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["skill1", "skill2"]] of [multiRobotA, multiRobotB]) {
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(primarySkillA);
    }
    
    for ([numberB = -1] of robots) {
                           ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for ([numberB = -1] of getRobots()) {
                           ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for ([numberB = -1] of [robotA, robotB]) {
                           ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberB);
    }
    for ([nameB = "noName"] of multiRobots) {
                               ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for ([nameB = "noName"] of getMultiRobots()) {
                               ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    for ([nameB = "noName"] of [multiRobotA, multiRobotB]) {
                               ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameB);
    }
    
    for ([numberA2 = -1, nameA2 = "noName", skillA2 = "skill"] of robots) {
                                                                  ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for ([numberA2 = -1, nameA2 = "noName", skillA2 = "skill"] of getRobots()) {
                                                                  ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for ([numberA2 = -1, nameA2 = "noName", skillA2 = "skill"] of [robotA, robotB]) {
                                                                  ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameA2);
    }
    for ([nameMA = "noName", [
                             ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["skill1", "skill2"]] of multiRobots) {
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
                                 ~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for ([nameMA = "noName", [
                             ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["skill1", "skill2"]] of getMultiRobots()) {
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
                                 ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    for ([nameMA = "noName", [
                             ~
        primarySkillA = "primary",
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        secondarySkillA = "secondary"
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ] = ["skill1", "skill2"]] of [multiRobotA, multiRobotB]) {
    ~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'MultiSkilledRobot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    
    for ([numberA3 = -1, ...robotAInfo] of robots) {
                                           ~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for ([numberA3 = -1, ...robotAInfo] of getRobots()) {
                                           ~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }
    for ([numberA3 = -1, ...robotAInfo] of [robotA, robotB]) {
                                           ~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot[]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(numberA3);
    }